Name:                interpolateme
Version:             0.1
Synopsis:            OpenGL Demo
Description:	     Drag mouse and behold
License:             GPL-3
Author:              makemeunsee
Maintainer:          makemeunsee <makemeunsee@gmail.com>
Category:            Game
Build-Type:          Simple
Cabal-Version:       >= 1.2
Tested-with:         GHC==7.6.3
Extra-Source-Files:  README.md
Data-Files:          border_nolight.frag, border_nolight.vert

Executable interpolateme
  Main-is:             Main.hs
  ghc-options:         -O2
  Build-Depends:       base >= 3 && < 5, OpenGL >= 2.3, GLFW, GLUtil, OpenGLRaw, Vec, AC-Random, scientific, split, array, containers
  Other-Modules:       Geometry, ListUtil, FloretSphere, FlatModel, VoronoiCut, Labyrinth

Executable voronoi_tessellator
  Main-is:             Main-Voro.hs
  ghc-options:         -O2
  Build-Depends:       base >= 3 && < 5, OpenGL >= 2.3, GLFW, GLUtil, OpenGLRaw, Vec, AC-Random, scientific, split, array, containers
  Other-Modules:       Geometry, ListUtil, FloretSphere, FlatModel, PlaneCut, Labyrinth

Test-Suite geometry-tests
  Type:                exitcode-stdio-1.0
  Main-is:             Test-Geometry.hs
  Build-Depends:       base, hspec

Test-Suite labyrinth-tests
  Type:                exitcode-stdio-1.0
  Main-is:             Test-Labyrinth.hs
  Build-Depends:       base, hspec

Test-Suite planecut-tests
  Type:                exitcode-stdio-1.0
  Main-is:             Test-PlaneCut.hs
  Build-Depends:       base, hspec

Test-Suite listutil-tests
  Type:                exitcode-stdio-1.0
  Main-is:             Test-ListUtil.hs
  Build-Depends:       base, hspec, QuickCheck

Test-Suite voronoicut-tests
  Type:                exitcode-stdio-1.0
  Main-is:             Test-VoronoiCut.hs
  Build-Depends:       base, hspec, QuickCheck